--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -17,20 +17,20 @@
     }
    ],
    "source": [
-    "!pip install --upgrade --quiet langchain langchain-community langchain-openai chromadb\n",
-    "!pip install --upgrade --quiet pypdf pandas python-dotenv"
+    "!pip install --upgrade --quiet langchain langchain-community langchain-openai \"langchain-chroma>=0.1.2\"\n",
+    "!pip install --upgrade --quiet pypdf pandas python-dotenv "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import Chroma\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
@@ -53,12 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load PDF"
+    "## Load "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        " Document(metadata={'producer': 'Skia/PDF m132', 'creator': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/132.0.0.0 Safari/537.36', 'creationdate': '2025-01-31T00:25:32+00:00', 'title': 'Fake Resume: Sarah Chen - Google Docs', 'moddate': '2025-01-31T00:25:32+00:00', 'source': 'fake_resume.pdf', 'total_pages': 3, 'page': 2, 'page_label': '3'}, page_content='Projects \\n EcoTrack | GitHub \\n ●  Built full-stack application for tracking carbon footprint using React, Node.js, and \\n MongoDB \\n ●  Implemented machine learning algorithm for providing personalized sustainability \\n recommendations \\n ●  Featured in TechCrunch\\'s \"Top 10 Environmental Impact Apps of 2023\" \\n ChatFlow | Demo \\n ●  Developed real-time chat application using WebSocket protocol and React \\n ●  Implemented end-to-end encryption and message persistence \\n ●  Serves 5000+ monthly active users \\n Certifications \\n ●  AWS Certified Solutions Architect (2023) \\n ●  Google Cloud Professional Developer (2022) \\n ●  MongoDB Certified Developer (2021) \\n Languages \\n ●  English (Native) \\n ●  Mandarin Chinese (Fluent) \\n ●  Spanish (Intermediate) \\n Interests \\n ●  Open source contribution \\n ●  Tech blogging (15K+ Medium followers) \\n ●  Hackathon mentoring \\n ●  Rock climbing')]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split up the document into chunks (makes it easier to store later and for processing in LLMs)"
+    "## Split chunk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        " Document(metadata={'producer': 'Skia/PDF m132', 'creator': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/132.0.0.0 Safari/537.36', 'creationdate': '2025-01-31T00:25:32+00:00', 'title': 'Fake Resume: Sarah Chen - Google Docs', 'moddate': '2025-01-31T00:25:32+00:00', 'source': 'fake_resume.pdf', 'total_pages': 3, 'page': 2, 'page_label': '3'}, page_content='Projects \\n EcoTrack | GitHub \\n ●  Built full-stack application for tracking carbon footprint using React, Node.js, and \\n MongoDB \\n ●  Implemented machine learning algorithm for providing personalized sustainability \\n recommendations \\n ●  Featured in TechCrunch\\'s \"Top 10 Environmental Impact Apps of 2023\" \\n ChatFlow | Demo \\n ●  Developed real-time chat application using WebSocket protocol and React \\n ●  Implemented end-to-end encryption and message persistence \\n ●  Serves 5000+ monthly active users \\n Certifications \\n ●  AWS Certified Solutions Architect (2023) \\n ●  Google Cloud Professional Developer (2022) \\n ●  MongoDB Certified Developer (2021) \\n Languages \\n ●  English (Native) \\n ●  Mandarin Chinese (Fluent) \\n ●  Spanish (Intermediate) \\n Interests \\n ●  Open source contribution \\n ●  Tech blogging (15K+ Medium followers) \\n ●  Hackathon mentoring \\n ●  Rock climbing')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,12 +117,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating text embedding function"
+    "## Creating embed func\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,23 +138,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the vector DB"
+    "## DB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Eunha\\AppData\\Local\\Temp\\ipykernel_32520\\554224183.py:7: LangChainDeprecationWarning: Since Chroma 0.4.x the manual persistence method is no longer supported as docs are automatically persisted.\n",
-      "  vectorstore.persist()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_vector_db(chunks, embeddings, persist_directory):\n",
     "    vectorstore = Chroma.from_documents(\n",
@@ -171,12 +162,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now we can query the vector DB to grab only the relevant chunks"
+    "## Quwery"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup a templte for the prompting"
+    "## Template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +202,22 @@
      "output_type": "stream",
      "text": [
       "Human: \n",
-      "You are a helpful assistant that can answer questions about the resume.\n",
-      "Use the following pieces of retrieved context to answer the question. If you don't have enough information or don't know the answer, just say \"I don't know\".\n",
+      "You are a helpful assistant that can answer questions about the provided resume.\n",
+      "Use the following pieces of retrieved context to answer the question. If you don't have enough information or don't know the answer, just say \"N/A\".\n",
+      "Sarah Chen \n",
+      " Full Stack Web Developer \n",
+      " Email:  sarah.chen@email.com \n",
+      " LinkedIn:  linkedin.com/in/sarahchen \n",
+      " GitHub:  github.com/sarahcodes \n",
+      " Portfolio: sarahchen.dev \n",
+      " Location: San Francisco, CA \n",
+      " Professional Summary \n",
+      " Innovative Full Stack Web Developer with 6+ years of experience crafting scalable web  applications and microservices. Specialized in React, Node.js, and cloud architecture. Proven  track record of leading technical teams and implementing CI/CD pipelines that reduced  deployment time by 40%. Passionate about clean code, accessibility, and mentoring junior  developers. \n",
+      " Professional Experience \n",
+      " Senior Full Stack Developer \n",
+      " TechFlow Solutions  | San Francisco, CA  January 2022  - Present\n",
+      "\n",
+      " \n",
       "\n",
       "Sarah Chen \n",
       " Full Stack Web Developer \n",
@@ -227,7 +232,7 @@
       " Senior Full Stack Developer \n",
       " TechFlow Solutions  | San Francisco, CA  January 2022  - Present\n",
       "\n",
-      " --\n",
+      " \n",
       "\n",
       "Sarah Chen \n",
       " Full Stack Web Developer \n",
@@ -242,7 +247,7 @@
       " Senior Full Stack Developer \n",
       " TechFlow Solutions  | San Francisco, CA  January 2022  - Present\n",
       "\n",
-      " --\n",
+      " \n",
       "\n",
       "Sarah Chen \n",
       " Full Stack Web Developer \n",
@@ -256,60 +261,37 @@
       " Professional Experience \n",
       " Senior Full Stack Developer \n",
       " TechFlow Solutions  | San Francisco, CA  January 2022  - Present\n",
-      "\n",
-      " --\n",
-      "\n",
-      "Professional Experience \n",
-      " Senior Full Stack Developer \n",
-      " TechFlow Solutions  | San Francisco, CA  January 2022  - Present \n",
-      " ●  Architected and implemented a microservices-based  e-commerce platform serving 100K+ daily users  ●  Led a team of 5 developers in rebuilding the company's  flagship product using React and Node.js  ●  Implemented GraphQL API gateway that reduced API  response times by 60%  ●  Established coding standards and review processes that  improved code quality by 45% \n",
-      " Technical Skills \n",
-      " Frontend: \n",
-      " ●  React.js, Redux, Next.js, TypeScript  ●  Vue.js, Nuxt.js  ●  HTML5, CSS3, SASS/SCSS  ●  Jest, React Testing Library  ●  WebPack, Babel \n",
-      " Backend: \n",
-      " ●  Node.js, Express.js  ●  Python, Django  ●  GraphQL, REST APIs  ●  PostgreSQL, MongoDB\n",
-      "\n",
       "___\n",
       "\n",
       "Answer the following question based on the context provided.\n",
-      "\n",
       "Question: What is the first name in the resume?\n",
-      "\n",
-      "\n",
-      "\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='The first name in the resume is Sarah.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 10, 'prompt_tokens': 731, 'total_tokens': 741, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_dbaca60df0', 'id': 'chatcmpl-BUxKsY0OS63rbMPX6PHnkEmlIdhSs', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--bd0c2ef3-ae37-48a0-9687-66193a1286d2-0', usage_metadata={'input_tokens': 731, 'output_tokens': 10, 'total_tokens': 741, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='The first name in the resume is Sarah.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 10, 'prompt_tokens': 681, 'total_tokens': 691, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0392822090', 'id': 'chatcmpl-BVyfkr9cIFzTPmK9aPKzxcXx1HpP6', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--323d2960-2385-4a00-905f-e3375c71db84-0', usage_metadata={'input_tokens': 681, 'output_tokens': 10, 'total_tokens': 691, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "PROMPT_TEMPLATE = \"\"\"\n",
-    "You are a helpful assistant that can answer questions about the resume.\n",
-    "Use the following pieces of retrieved context to answer the question. If you don't have enough information or don't know the answer, just say \"I don't know\".\n",
-    "\n",
+    "You are a helpful assistant that can answer questions about the provided resume.\n",
+    "Use the following pieces of retrieved context to answer the question. If you don't have enough information or don't know the answer, just say \"N/A\".\n",
     "{context}\n",
-    "\n",
     "___\n",
     "\n",
     "Answer the following question based on the context provided.\n",
-    "\n",
     "Question: {question}\n",
-    "\n",
-    "\n",
-    "\n",
     "\"\"\"\n",
     "\n",
     "\n",
-    "context_text = \"\\n\\n --\\n\\n\".join([doc.page_content for doc in relevant_chunks])\n",
+    "context_text = \"\\n\\n \\n\\n\".join([doc.page_content for doc in relevant_chunks])\n",
     "\n",
     "prompt_template = ChatPromptTemplate.from_template(PROMPT_TEMPLATE)\n",
     "prompt = prompt_template.format(context=context_text, question=\"What is the first name in the resume?\")\n",
@@ -319,52 +301,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generate response"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='The interests listed in the resume are:\\n- Open source contribution\\n- Tech blogging (15K+ Medium followers)\\n- Hackathon mentoring\\n- Rock climbing', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 32, 'prompt_tokens': 771, 'total_tokens': 803, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_dbaca60df0', 'id': 'chatcmpl-BUxIHF8zVU895P7CkKK1fhQJTTJmI', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--100fd15e-ea73-4cb5-8ed0-7da6f3cfeaf2-0', usage_metadata={'input_tokens': 771, 'output_tokens': 32, 'total_tokens': 803, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def format_document(document):\n",
-    "    return \"\\n\\n\".join([doc.page_content for doc in document])\n",
+    "    return \"\\n\\n\".join([doc.page_content for doc in document])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def format_document(document):\n",
+    "#     return \"\\n\\n\".join([doc.page_content for doc in document])\n",
     "\n",
     "\n",
-    "##chaining method that chains the retriever, format_documents, questions, the prompt template structure, and the desired LLM\n",
-    "rag_chain = (\n",
-    "    {\"context\": retriever | format_document, \"question\": RunnablePassthrough()}\n",
-    "    | prompt_template\n",
-    "    | llm.with_str\n",
-    ")\n",
-    "\n"
+    "\n",
+    "# rag_chain = (\n",
+    "#     {\"context\": retriever | format_document, \"question\": RunnablePassthrough()}\n",
+    "#     | prompt_template\n",
+    "#     | llm.with_str\n",
+    "# )\n",
+    "\n",
+    "#ignore this "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Suppose we want it in a neat structure to use later on, we can use the pydantic model"
+    "## Use pydantic to format neatly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -403,19 +378,19 @@
     "    | llm.with_structured_output(Resume, strict=True)\n",
     ")\n",
     "\n",
-    "structured = rag_chain.invoke(\"Give me the first, last, email, and technical skills of the candidate (frontend and backend)\")\n"
+    "structured = rag_chain.invoke(\"Give me the first name, last name, email, and technical skills of the candidate (frontend and backend)\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now we can neatly present it in a pandas Dataframe"
+    "## Pandas DF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +434,7 @@
        "      <td>linkedin.com/in/sarahchen</td>\n",
        "      <td>github.com/sarahcodes</td>\n",
        "      <td>sarahchen.dev</td>\n",
-       "      <td>[React.js, Redux, Next.js, TypeScript, Vue.js,...</td>\n",
+       "      <td>[React, Node.js, cloud architecture]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -472,11 +447,11 @@
        "                           linkedin                 github        website  \\\n",
        "resume 1  linkedin.com/in/sarahchen  github.com/sarahcodes  sarahchen.dev   \n",
        "\n",
-       "                                           technical_skills  \n",
-       "resume 1  [React.js, Redux, Next.js, TypeScript, Vue.js,...  "
+       "                              technical_skills  \n",
+       "resume 1  [React, Node.js, cloud architecture]  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
